fix content bg on dark mode

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -1201,8 +1201,7 @@ html.dark-theme {
 					background-color: $darkspace;
 
 					&::before {
-						color: $oxfordblue;
-						background: $midblue;
+						color: $lightplum;
 					}
 				}
 			}
